# Embedded-Systems-Diploma

./: .gitmodules
01. C Programming/05. Floats/round/: main.c
01. C Programming/07. Arrays/Remove Prime/: ARRAY.h  MATH.c  main.c
01. C Programming/07. Arrays/Search Array/: ARRAY.c  ARRAY.h  main.c
01. C Programming/08. Strings/: main.c
01. C Programming/09. Type Modifiers/: main.c  modifiers.h
01. C Programming/10. Structs/: main.c
01. C Programming/Quiz/: C tricks.c
02. Data Structures/01. Stack/: main.c  stack.c  stack.h
02. Data Structures/02. Queue/: queue.h
03. Sheets/Sheet 1/02/: main.c
03. Sheets/Sheet 1/03/: main.c
03. Sheets/Sheet 1/05/: main.c
03. Sheets/Sheet 2/03/: main.c
03. Sheets/Sheet 2/09/: main.c
03. Sheets/Sheet 3/: Ahmed Harbi_Sheet 03.c
03. Sheets/Sheet 4/: Ahmed Harbi_Sheet 04.c
03. Sheets/Sheet 5/: Ahmed Harbi_Sheet 05.c
04. Tools/CMake/Lab_1 - include dir | set | message | if-elseif-else-endif/: CMakeLists.txt
04. Tools/CMake/Lab_1 - include dir | set | message | if-elseif-else-endif/include/: calc.h
04. Tools/CMake/Lab_3 - Variables | Configure File/: CMakeLists.txt  defaultconfig.h.in  main.c
07. Libraries/: ARRAY.c  ARRAY.h  BIT_MANIPULATION.c  BIT_MANIPULATION.h  BIT_MATH.c  BIT_MATH.h  CIRCULAR_LINKED_LIST.c  CIRCULAR_LINKED_LIST.h  DOUBLY_LINKED_LIST.c  DOUBLY_LINKED_LIST.h  LINEAR_LINKED_LIST.c  LINEAR_LINKED_LIST.h  MATH.c  MATH.h  QUEUE.c  QUEUE.h  SORTING.c  SORTING.h  STACK.c  STACK.h  STRINGS.c  STRINGS.h  _main.c  test.c
ARRAY/: ARRAY.c  ARRAY.h
C Programming/: pattern.c
C Programming/Section 10/: modifiers.c
Embedded Systems Diploma/Embedded Systems Diploma/: main.c
Embedded Systems Diploma/Embedded Systems Diploma.xcodeproj/: project.pbxproj
Embedded/Embedded.X/: main.c
Libraries/: ARRAY.c  ARRAY.h  MATH.c  MATH.h  SORTING.c  SORTING.h  STRINGS.c  STRINGS.h  test.c
MATH/: MATH.h
Program/: ARRAY.c  ARRAY.h  MATH.c  MATH.h  SORTING.c  SORTING.h  STRINGS.c  STRINGS.h  main.c
Section 10/: ahmed_harbi.c
Section 2/Largest Number/: main.c
Section 2/OddEven/: main.c
Section 2/fifthN/: main.c
Section 3/InBetween/: main.c
Section 3/Sumdigits/: main.c
Section 3/div3/: main.c
Section 4/Base Two/: main.c
Section 4/Calc/: main.c
Section 4/Isalpha/: main.c
Section 4/toLower/: main.c
Section 5/GetOnes/: main.c
Section 5/toBinary/: main.c
Section 9/: main.c
Sheets/: ARRAY.c
Sheets/Sheet 1/: Ahmed Harbi_Sheet 01.c
Sheets/Sheet 2/: Ahmed Harbi_Sheet 02.c
Sheets/Sheet 3/: Ahmed Harbi_Sheet 03.c
Sheets/Sheet 4/: Ahmed Harbi_Sheet 04.c
Sheets/Sheet 5/: Ahmed Harbi_Sheet 05.c
(+45 files in other folders)
